chore: 문서 내 한글 오타 수정

--- a/docs/용어_사전.md
+++ b/docs/용어_사전.md
@@ -1,7 +1,7 @@
 ## 개요
 
 프로젝트 및 소스 코드 내에서 사용되는 언어에 대한 통일성을 위한 문서입니다.  
-팀 내 및 팀 간에서 소통 시 오류를 방지하기 위헤 현재 파일에 따른 언어를 작성해주세요.
+팀 내 및 팀 간에서 소통 시 오류를 방지하기 위해 현재 파일에 따른 언어를 작성해주세요.
 
 ### 참고
 
