--- a/src/docs/asciidoc/api/school/school.adoc
+++ b/src/docs/asciidoc/api/school/school.adoc
@@ -1,4 +1,15 @@
 [[school-create]]
 === 총괄 학교 등록
 
-operation::school-controller-test/총괄_신규학교를_추가합니다[snippets='http-request,request-fields,http-response']
+operation::school-controller-test/총괄_신규학교를_추가한다[snippets='http-request,request-fields,http-response']
+
+[[school-create]]
+=== 총괄 학교 삭제
+
+operation::school-controller-test/총괄_학교를_제거한다[snippets='http-request,path-parameters,http-response']
+
+[[school-update]]
+=== 총괄 학교정보 수정
+
+operation::school-controller-test/총괄_학교정보를_수정한다[snippets='http-request,path-parameters,request-fields,http-response']
+
