--- a/src/docs/asciidoc/api/school/school.adoc
+++ b/src/docs/asciidoc/api/school/school.adoc
@@ -2,7 +2,7 @@
 [[school-list]]
 === 총괄 학교 목록 조회
 
-operation::school-query-controller-test/학교_목록을_조회합니다[snippets='http-request,http-response']
+operation::school-query-controller-test/학교_목록을_조회합니다[snippets='http-request,query-parameters,http-response']
 
 [[school-detail]]
 === 총괄 학교 상세 조회
