--- a/src/docs/asciidoc/api/school/school.adoc
+++ b/src/docs/asciidoc/api/school/school.adoc
@@ -14,10 +14,15 @@ operation::school-query-controller-test/학교_상세정보를_조회합니다[s
 
 operation::school-controller-test/총괄_신규학교를_추가한다[snippets='http-request,request-fields,http-response']
 
-[[school-create]]
+[[school-delete]]
 === 총괄 학교 삭제
 
 operation::school-controller-test/총괄_학교를_제거한다[snippets='http-request,path-parameters,http-response']
+
+[[school-delete-bulk]]
+=== 총괄 학교 일괄 삭제
+
+operation::school-controller-test/총괄_학교를_일괄_삭제한다[snippets='http-request,request-fields,http-response']
 
 [[school-update]]
 === 총괄 학교정보 수정
