--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -9,3 +9,17 @@ endif::[]
 :toclevels: 2
 :sectlinks:
 
+[[School-API]]
+== 학교 API
+
+include::api/school/school.adoc[]
+
+[[Gisu-API]]
+== 기수 API
+
+include::api/gisu/gisu.adoc[]
+
+[[Chapter-API]]
+== 지부 API
+
+include::api/chapter/chapter.adoc[]
